--- a/_posts/2023-07-28-RA.markdown
+++ b/_posts/2023-07-28-RA.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Research Assistant - UCSB"
+title:  "UCSB"
 startdate: 2022-09-01
 categories: engagement
 subtype: Research Assistant at PLSE Lab
